[package]
name = "df-minter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
candid = "0.7"
clap = { version = "3.0", features = ["derive"] }
garcon = "0.2"
ic-agent = "0.17"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "1"
